# renovate-example

./: .pre-commit-config.yaml  pyproject.toml  renovate.json
requirements/: requirements.in  requirements.txt
